src/css/Blocks/heading.css
.heading {
  font-weight: bold;
  font-size: 2em;
  margin-bottom: var(--spacing-s);
  position: relative;
}

.heading--light {
  color: var(--color-light);
}

.heading--mt-l {
  margin-top: var(--spacing-l);
}

.heading--regular {
  font-weight: normal;
}

.heading--xl {
  font-size: 2em;
}

.heading--m {
  font-size: 1em;
}

.heading--s {
  font-size: 0.9em;
}

.heading--xxs {
  font-size: 0.65em;
  margin-bottom: var(--spacing-xxs);
}

@media (min-width: 1024px) {
  .heading {
    font-size: 3em;
  }

  .heading--xl {
    font-size: 4em;
  }

  .heading--m {
    font-size: 1.1em;
  }

  .heading--s {
    font-size: 0.9em;
  }

  .heading--xxs {
    font-size: 0.65em;
    margin-bottom: var(--spacing-xxs);
  }
}

